@@ -1,0 +1,8 @@
+# This file can be used to install module dependencies for unit testing
+# See https://github.com/puppetlabs/puppetlabs_spec_helper#using-fixtures for details
+---
+fixtures:
+  forge_modules:
+    augeas_core: 'puppetlabs/augeas_core'
+    mysql: 'puppetlabs/mysql'
+    stdlib: "puppetlabs/stdlib"
