@@ -12,8 +12,8 @@
       "version_requirement": ">= 5.0.0 < 6.0.0"
     },
     {
-      "name": "puppetlabs/mysql",
-      "version_requirement": ">= 6.0.0 < 7.0.0"
+      "name": "puppetlabs/augeas_core",
+      "version_requirement": ">= 1.0.0 < 2.0.0"
     }
   ],
   "operatingsystem_support": [
