@@ -9,6 +9,7 @@ describe 'holland::mysqldump::backupset' do
   on_supported_os.each do |os, os_facts|
     context "on #{os}" do
       let(:facts) { os_facts }
+      let(:pre_condition) { "include ::holland::mysqldump include ::holland" }
 
       it { is_expected.to compile }
     end
