@@ -71,7 +71,7 @@ dump-routines       = <%= @dump_routines %>
 dump-events			= <%= @dump_events %>
 
 ## Whether to stop the slave before commencing with the backup
-stop-slave          = <%= stop_slave %>
+stop-slave          = <%= @stop_slave %>
 
 ## Whether to record the binary log name and position at the time of the
 ## backup.
